deploy/dev/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
spec:
  rules:
    - host: 4.224.252.21.sslip.io  #?™é??¹æ?ä½ ç?Cluster1?¢é??„{IP}.sslip.io
      http:
        paths:
          - pathType: Prefix
            path: /VoteService
            backend:
              service:
                name: vote-api-dev-svc
                port:
                  number: 8081
