deploy/dev/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 4.224.252.21.sslip.io   #?™é??¹æ?ä½ ç?Cluster1?¢é??„{IP}.sslip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vote-ui-dev-svc
                port:
                  number: 80
